--- a/app/globals.css
+++ b/app/globals.css
@@ -74,4 +74,26 @@ body {
     font-weight: 400;
     line-height: 17px; /* 130.769% */
   }
+
+  @media (max-width: 768px) {
+    .text-h1 {
+      color: var(--Black_BG, #302929);
+      font-family: Brockmann;
+      font-size: 70px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 80px; /* 114.286% */
+      letter-spacing: -0.84px;
+    }
+
+    .text-h2 {
+      color: var(--Black_BG, #302929);
+      font-family: Brockmann;
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 50px; /* 125% */
+      letter-spacing: -0.3px;
+    }
+  }
 }
